--- a/RGBDCaptureKinect/openFrameworks-Info.plist
+++ b/RGBDCaptureKinect/openFrameworks-Info.plist
@@ -6,17 +6,21 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>RGBD</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.openFrameworks</string>
+	<string>com.RGBDToolkit.RGBDCaptureKinect</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>004</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>CFBundleIconFile</key>
-	<string>RGBD.icns</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.video</string>
 </dict>
 </plist>
