--- a/RGBDVisualize/openFrameworks-Info.plist
+++ b/RGBDVisualize/openFrameworks-Info.plist
@@ -9,16 +9,16 @@
 	<key>CFBundleIconFile</key>
 	<string>RGBD.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.openFrameworks</string>
+	<string>com.RGBDToolkit.RGBDVisualize</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>004</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>CFBundleIconFile</key>
-	<string>RGBD.icns</string>
 </dict>
 </plist>
