--- a/RGBDVisualize/Project.xcconfig
+++ b/RGBDVisualize/Project.xcconfig
@@ -3,7 +3,12 @@
 OF_PATH = ../../..
 
 //THIS HAS ALL THE HEADER AND LIBS FOR OF CORE
-#include "../../../libs/openFrameworksCompiled/project/osx/CoreOF.xcconfig"
+#include "../../../libs/openFrameworksCompiled/project/ios/CoreOF.xcconfig"
 
 OTHER_LDFLAGS = $(OF_CORE_LIBS) 
-HEADER_SEARCH_PATHS = $(OF_CORE_HEADERS) "../../../addons/ofxOpenCv/libs/opencv/include/" "../../../addons/ofxCv/libs/ofxCv/include/"
+HEADER_SEARCH_PATHS = $(OF_CORE_HEADERS)
+
+COMPRESS_PNG_FILES = NO
+GCC_THUMB_SUPPORT = NO
+IPHONEOS_DEPLOYMENT_TARGET = 3.1
+TARGETED_DEVICE_FAMILY = 1
