--- a/RGBDCaptureOpenNI/openFrameworks-Info.plist
+++ b/RGBDCaptureOpenNI/openFrameworks-Info.plist
@@ -9,13 +9,13 @@
 	<key>CFBundleIconFile</key>
 	<string>RGBD.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.RGBDToolkit.RGBDCaptureOpenNI</string>
+	<string>com.RGBDToolkit.RGBDCaptureXtionPro</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0041</string>
+	<string>005</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
