--- a/RGBDCaptureKinect/project backup/RGBDCaptureKinect.vcxproj.filters
+++ b/RGBDCaptureKinect/project backup/RGBDCaptureKinect.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDAlignment.cpp">
       <Filter>addons\ofxRGBDepth\src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDMeshBuilder.cpp">
+      <Filter>addons\ofxRGBDepth\src</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDPlayer.cpp">
       <Filter>addons\ofxRGBDepth\src</Filter>
     </ClCompile>
@@ -234,12 +237,6 @@
     </ClCompile>
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\gui\ofxRGBDCaptureGui.cpp">
       <Filter>addons\ofxRGBDepth\gui</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDCPURenderer.cpp">
-      <Filter>addons\ofxRGBDepth\src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDGPURenderer.cpp">
-      <Filter>addons\ofxRGBDepth\src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -428,6 +425,9 @@
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDAlignment.h">
       <Filter>addons\ofxRGBDepth\src</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDMeshBuilder.h">
+      <Filter>addons\ofxRGBDepth\src</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDPlayer.h">
       <Filter>addons\ofxRGBDepth\src</Filter>
     </ClInclude>
@@ -583,12 +583,6 @@
     </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\gui\ofxRGBDCaptureGui.h">
       <Filter>addons\ofxRGBDepth\gui</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDCPURenderer.h">
-      <Filter>addons\ofxRGBDepth\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDGPURenderer.h">
-      <Filter>addons\ofxRGBDepth\src</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
