updated project files

--- a/RGBDVisualize/RGBDVisualize.vcxproj
+++ b/RGBDVisualize/RGBDVisualize.vcxproj
@@ -100,6 +100,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\couples\ofxTimeline\ofxTLDepthImageSequence.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\couples\ofxTimeline\ofxTLVideoDepthAlignmentScrubber.cpp" />
+    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDCPURenderer.cpp" />
+    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDGPURenderer.cpp" />
+    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDVideoExporter.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\testApp.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCv\libs\ofxCv\src\Calibration.cpp" />
@@ -128,8 +131,6 @@
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageProvider.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageRecorder.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageSequence.cpp" />
-    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDAlignment.cpp" />
-    <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDMeshBuilder.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDPlayer.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDRenderer.cpp" />
     <ClCompile Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDScene.cpp" />
@@ -185,6 +186,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\couples\ofxTimeline\ofxTLDepthImageSequence.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\couples\ofxTimeline\ofxTLVideoDepthAlignmentScrubber.h" />
+    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDCPURenderer.h" />
+    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDGPURenderer.h" />
+    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDVideoExporter.h" />
     <ClInclude Include="src\testApp.h" />
     <ClInclude Include="..\..\..\addons\ofxCv\src\ofxCv.h" />
     <ClInclude Include="..\..\..\addons\ofxCv\libs\ofxCv\include\ofxCv\Calibration.h" />
@@ -218,8 +222,6 @@
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageProvider.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageRecorder.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxDepthImageSequence.h" />
-    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDAlignment.h" />
-    <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDMeshBuilder.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDPlayer.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDRenderer.h" />
     <ClInclude Include="..\..\..\addons\ofxRGBDepth\src\ofxRGBDScene.h" />
