--- a/DKVisualize/openFrameworks-Info.plist
+++ b/DKVisualize/openFrameworks-Info.plist
@@ -6,6 +6,8 @@
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFile</key>
+	<string>DepthKit</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.depthkit.DKVisualize</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -13,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>007</string>
+	<string>006</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
